--- a/public/template.html
+++ b/public/template.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<head>
-  <title>Center for Craniofacial Regeneration | University of Pittsburgh</title>
-  <link href="/assets/base-compact.css"
-  media="all" rel="stylesheet" type="text/css" />
-  <script src="/assets/base-compact.js"
-    type="text/javascript"></script>
-  
+<html lang="en">
+  <head>
+    <title>Center for Craniofacial Regeneration | University of Pittsburgh</title>
+    <meta charset="utf-8" />
+    <link href="/assets/base-compact.css"
+    media="all" rel="stylesheet" type="text/css" />
+    <script src="/assets/base-compact.js"
+      type="text/javascript"></script>
+  </head>
+    
   <!-- Everything above this line needs to be on EVERY PAGE -->
   <body>
     <div class='container'>
@@ -212,11 +215,11 @@
               <!-- Carousel Item Controls -->
               <a class='carousel-control left' data-slide='prev'
                 href='#carousel'>
-                ‹
+                &laquo;
               </a>
               <a class='carousel-control right' data-slide='next'
                 href='#carousel'>
-                ›
+                &raquo;
               </a>
               <!-- Carousel Item Controls End -->
             </div>
@@ -282,4 +285,4 @@
 
     </div>
   </body>
-</head>
+</html>
